# inhipy

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg  tox.ini
models/stardist/: thresholds.json
notebooks/cells/: 01_Cells_Stardist_Segment_Nuclei.ipynb  02_Cells_Transform_Nuclei.ipynb  03_Cells_Classify_Nuclei.ipynb
notebooks/registration/: 01_Registration.ipynb  02_Transformation.ipynb
notebooks/synapses/: 02_Synapse_Stardist_Segment_Candidates.ipynb  04_Synapse_Classify.ipynb  05_Synapse_Pairing.ipynb
src/inhipy/cells/: classify.py  segment.py
src/inhipy/registration/: register.py  transform.py  utils.py
src/inhipy/synapses/: classify.py  pair.py  plot.py  segment.py  utils.py
src/inhipy/utils/: analysis.py  config.py  data.py  features.py  loader.py  loggers.py  plotter.py  splitter.py
src/inhipy/viewer/: napari_utils.py  visualize.py
