[metadata]
name = inhipy
version = 0.0.1

description = inhipy : utils for the analysis of inhibitory synapses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LemonJust/inhipy
author = Anna Nadtochiy
author_email = lemonjustgithub@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/LemonJust/inhipy/issues
    Documentation = https://github.com/LemonJust/inhipy#README.md
    Source Code = https://github.com/LemonJust/inhipy
    User Support = https://github.com/LemonJust/inhipy/issues

[options]
packages = find:
install_requires =
    numpy
    tifffile
    tqdm


python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox

[options.package_data]
* = *.yaml
